--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
     <!--Color Scheme -->
-    <link rel="stylesheet" href="css/rojo-advnt.css">
+    <link rel="stylesheet" href="css/azul-advnt.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TW850K92N2"></script>
@@ -122,7 +122,7 @@
     <nav class="navbar navbar-top-default navbar-expand-lg navbar-gradient gradient-bg1 nav-box-round">
         <div class="container">
             <a href="#home" title="Logo" class="logo scroll">
-                <img src="images/logo_advnt.png" alt="logo" class="logo-dark default">
+                <img src="images/logo_FFP.png" alt="logo" class="logo-dark default">
             </a>
 
             <!--Nav Links-->
@@ -217,7 +217,7 @@
                          data-responsive_offset="on"
                          data-frames='[{"from":"y:50px;opacity:0;","speed":1000,"to":"o:1;","delay":600,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);bw:2px 2px 2px 2px;"}]'
                          data-textAlign="['right','right','right','right']"
-                         style="z-index: 8; white-space: nowrap; font-family:'Ubuntu', sans-serif; !important; font-weight: 700;">
+                         style="z-index: 8; white-space: nowrap; font-weight: 700; font-family:'Ubuntu',sans-serif !important;">
                          Advanced Network Technologies
                     </div>
                     <!-- layer nr. 2 -->
@@ -239,18 +239,18 @@
                     </div>
                     <!-- layer nr. 3 -->
                     <div class="tp-caption z-index-5"
-                         data-x="['right','right','right','right']" data-hoffset="['45','45','20','15']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['135','135','135','135']"
-                         data-fontsize="['18','18','18','18']"
-                         data-lineheight="['18','18','18','18']"
-                         data-width="none"
-                         data-height="none"
-                         data-whitespace="nowrap"
-                         data-type="text"
-                         data-responsive_offset="on"
-                         data-frames='[{"from":"y:50px;opacity:0;","speed":1000,"to":"o:1;","delay":1000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);bw:2px 2px 2px 2px;"}]'
-                         data-textAlign="['center','center','center','center']"
-                         style="z-index: 7; white-space: nowrap; font-family:'Ubuntu', sans-serif; !important; font-weight: 100;">
+                    data-x="['right','right','right','right']" data-hoffset="['45','45','20','15']"
+                    data-y="['middle','middle','middle','middle']" data-voffset="['135','135','135','135']"
+                    data-fontsize="['18','18','18','18']"
+                    data-lineheight="['18','18','18','18']"
+                    data-width="none"
+                    data-height="none"
+                    data-whitespace="nowrap"
+                    data-type="text"
+                    data-responsive_offset="on"
+                    data-frames='[{"from":"y:50px;opacity:0;","speed":1000,"to":"o:1;","delay":1000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);bw:2px 2px 2px 2px;"}]'
+                    data-textAlign="['center','center','center','center']"
+                    style="z-index: 7; white-space: nowrap; font-weight: 100; font-family:'Ubuntu', sans-serif !important">
                         <a href="#about" class="nav-link btn btn-gradient btn-rounded btn-large me-2">Who we are</a>
                         <a href="#services" class="nav-link btn btn btn-white btn-rounded btn-large">What we do</a>
                     </div>
@@ -473,7 +473,7 @@
 <!--Content End-->
 
 <!--Footer Start-->
-<section class="bg-light text-center">
+<section class="bg-secondary text-center">
     <h2 class="d-none">hidden</h2>
     <div class="container">
         <div class="row">
@@ -484,7 +484,7 @@
                     </ul>
                 </div> -->
                 <div class="footer-logo">
-                    <img src="images/logo_advnt_footer.png" alt="Advanced Network Technologies" class="logo-dark default">
+                    <img src="images/logo_FFP.png" alt="Fiber Future Planning" class="logo-dark default">
                 </div>
                 <p class="company-about fadeIn">© 2023</p>
             </div>
