--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 <!--Content End-->
 
 <!--Footer Start-->
-<section class="bg-secondary text-center">
+<section class="bg-footer text-center section-padding-footer">
     <h2 class="d-none">hidden</h2>
     <div class="container">
         <div class="row">
