--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="header-top-text"><a href="https://goo.gl/maps/NyTBJm3o4nGvtY3k9" target="_blank"><i class="fa fa-map-marker me-2"></i> Office 9.1, 20 St Andrew Street, London, EC4A 3AG, UK</a></div>
+                    <div class="header-top-text"><a href="https://goo.gl/maps/NyTBJm3o4nGvtY3k9" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</a></div>
                 </div>
                 <div class="col-md-6">
                     <div class="header-top-text text-end">
@@ -281,9 +281,9 @@
             <div class="col-md-7">
                 <div class="title">
                         <h6 class="third-color mb-2">Who we are</h6>
-                        <h2 class="mb-2">Innovation, integrity and excellence</h2>
-                        <p class="mb-2">Those are the pillars and values of Advanced Network Technologies. We embrace change and welcome new technology. We thrive on flexibility and take pride in our ability to adapt to new approaches.</p>
-                        <p>Advanced Network Technologies invests in and manages telecom and IT projects, with special focus on fibre deployments, 5G and mobile services and advanced private connectivity projects.</p>
+                        <h2 class="mb-2">Excellence, Integrity, and Innovation </h2>
+                        <p class="mb-2">Future Fibre Platform is driven by principles of excellence, integrity, and innovation. We are dedicated to embracing change and the latest technologies, priding ourselves on adaptability and a welcoming attitude towards innovation. </p>
+                        <p>Specialising in telecommunications and IT project investment and management, our core focus areas include fibre optic deployments, 5G and mobile services, and advanced private connectivity initiatives. We offer a range of strategic and operational consulting services and invest in IT and telecommunications ventures. </p>
                     </div>
             </div>
         </div>
@@ -336,7 +336,14 @@
             <div class="col-md-7 order-md-2 wow fadeInUp">
                 <div class="blog-text">
                     <h6>&#43; Strategy</h6>
-                    <p>Technology strategy and business strategy are key for telecoms. We have experience on both the demand and supply sides and we can help with new technology assessments and business cases; investment strategies and capital planning for next-generation networks and technologies; strategic technology deployment and adoption programme management; Fibre rollouts, 5G and mobile services, and IT service rationalisation and transformation.</p>
+                    <p>In the telecommunications industry, effective strategies are imperative. With extensive experience in both demand and supply aspects of the sector, we excel in various areas, including: </p>
+                    <ul class="liStrategy">
+                        <li>Assessing new technologies and developing comprehensive business cases.</li>
+                        <li>Formulating investment strategies and capital plans for cutting-edge network and technology upgrades.</li>
+                        <li>Leading strategic technology deployments and overseeing adoption programmes.</li>
+                        <li>Supporting the rollout of fibre optic networks, 5G, and mobile services.</li>
+                        <li>Implementing IT service rationalisation and transformation initiatives.</li>
+                    </ul>
                 </div>
             </div>
             <div class="col-md-5">
@@ -349,8 +356,9 @@
         <div class="row align-items-center mb-5">
             <div class="col-md-7 order-md-2 wow fadeInUp">
                 <div class="blog-text">
-                    <h6>&#43; Plan</h6>
-                    <p>From upgrading access networks to planning, designing and building greenfield, we’ve done it all. Working with us, you’ll get an always-available team to help you understand your options, where you’ll get the biggest impact, and how to put it all into practice. We bring next-gen access networks closer, every day. We draw on holistic network excellence to deliver better access: a team that puts your business goals first, expert project management from a talented team and an automated toolchain throughout your project.</p>
+                    <h6>&#43; Planning</h6>
+                    <p>Our expertise spans from upgrading access networks to detailed planning, design, and greenfield project construction. When you collaborate with us, you gain access to a dedicated team available around the clock. They'll assist you in understanding your options, identifying areas of significant impact, and guiding you through practical implementation.</p>
+                    <p>Every day, we work towards bringing next-generation access networks closer to you. Our approach centres on comprehensive network excellence, translating into enhanced access. We prioritise your business objectives, offer expert project management through a talented team, and employ an automated toolchain throughout your project. </p>
                 </div>
             </div>
             <div class="col-md-5">
@@ -362,8 +370,8 @@
         <div class="row align-items-center mb-5">
             <div class="col-md-7 order-md-2 wow fadeInUp">
                 <div class="blog-text">
-                    <h6>&#43; Manage</h6>
-                    <p>We help our customers establish a clear, actionable, and quantified perspective on which capabilities they should prioritize to build innovative products and services, and digitize their processes for greater effectiveness. We create road maps that detail the business requirements to realise value from these new digital opportunities. Our distinctive approach enables telecom companies to focus on their greatest strengths and gain a competitive advantage. </p>
+                    <h6>&#43; Management </h6>
+                    <p>At our core, we empower clients to gain a clear, actionable, and measurable understanding of prioritised capabilities when developing innovative products, services, and digitalising operations for efficiency. We specialise in crafting thorough roadmaps outlining the specific business requirements needed to extract value from emerging digital prospects. Our unique methodology empowers telecom companies to focus on their strengths, gaining a competitive edge in the industry.  </p>
                 </div>
             </div>
             <div class="col-md-5">
@@ -375,8 +383,8 @@
         <div class="row align-items-center mb-5">
             <div class="col-md-7 order-md-2 wow fadeInUp">
                 <div class="blog-text">
-                    <h6>&#43; Invest</h6>
-                    <p>With so many digital possibilities, it’s critical to invest in the right ones. We are a fast growing, entrepreneurial investment manager based in the City of London. We believe a great investment opportunity isn’t just financial, it’s a chance to invest in things that matter: our environment, our health, our society, our local communities and our economy. Our ability to adapt and innovate to create investment products for our customers is key to our growth and success and our core values are vital to everything we do, from the businesses we invest in to the people we hire.</p>
+                    <h6>&#43; Investment </h6>
+                    <p>In a digital landscape brimming with opportunities, making the right investments is critical. We're a rapidly growing, entrepreneurial investment management firm based in the City of London. We believe that a great investment isn't just about finances; it's an opportunity to invest in crucial facets like our environment, health, society, local communities, and the economy. Our ability to adapt and innovate in creating investment products for our clients is key to our growth and success. Our core values guide everything we do, from selecting businesses to invest in to hiring individuals. </p>
                 </div>
             </div>
             <div class="col-md-5">
@@ -397,8 +405,7 @@
                 <div class="title d-inline-block">
                     <h6 class="mb-3">Our Background</h6>
                     <h2 class="mb-3">Experience</h2>
-                    <p class="mb-3">We are a multi-skilled organization focused on fibre deployments and telecom projects. With a track record of +10 years in the telecoms space and global presence in Europe, America and Africa, we provide tailor–made services to our customers.</p>
-                    <p>We have experience in fibre deployments, telecom infrastructure management, data centres and IT business services, open access telecom infrastructure and 5G and MVNO/E implementations and business cases.</p>
+                    <p class="mb-3">We're a multifaceted organisation centred on fibre deployments and telecom projects. With a 10+ year track record in the telecoms sector and a global presence across Europe, America, and Africa, we provide bespoke services to our clients. Our expertise includes fibre deployments, telecom infrastructure management, data centres, IT business services, open-access telecom infrastructure, and 5G and MVNO/E implementations, along with business case development. </p>
                 </div>
             </div>
         </div>
@@ -456,10 +463,10 @@
                     <h6 class="third-color mb-4">Contact</h6>
                     <h2 class="mb-4">Let's get in touch</h2>
                     <p class="contact-p"><a href="mailto:info@advnt.co.uk"><i class="fa fa-comment-o me-2"></i>info@advnt.co.uk</a></p>
-                    <p class="contact-p"><a href="https://goo.gl/maps/NyTBJm3o4nGvtY3k9" target="_blank"><i class="fa fa-map-marker me-2"></i> Office 9.1, 20 St Andrew Street, London, EC4A 3AG, UK</a></p>
+                    <p class="contact-p"><a href="https://maps.app.goo.gl/1ZJZAcmxtDg5bJ1U6" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</a></p>
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
-                    <p>Advanced Network Technologies LTD is a company incorporated in England and Wales with Company Number 11819696  and Registered Office located at 20 St Andrew Street, London, EC4A 3AG.</p>
+                    <p>Advanced Network Technologies LTD is a company incorporated in England and Wales with Company Number 15014119 and Registered Office located at Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</p>
                     <p>&nbsp;</p>
                     <!-- <h6 class="third-color mb-4">Send us an enquiry</h6> -->
                 </div>
