--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <div class="container">
         <div class="row align-items-top wow fadeInUp">
             <div class="col-md-5 mb-4">
-                <p><img class="border-white" src="images/img_advnt_12.jpg" alt="image"></p>
+                <p><img class="border-white" src="images/img_advnt_12.png" alt="image"></p>
                 <p>&nbsp;</p>
             </div>
             <div class="col-md-7">
