--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Title -->
-    <title>Advanced Network Technologies</title>
+    <title>Future Fibre Planning</title>
 
     <!-- Meta Tags -->
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 	<meta property="og:title" content="Advanced Network Technologies" />
 	<meta property="og:description" content="Telecom and IT experts. We are specialized in fibre deployments, 5G and mobile/radio services." />
 	<meta property="og:url" content="https://www.advnt.co.uk" />
-	<meta property="og:site_name" content="Advanced Network Technologies" />	
+	<meta property="og:site_name" content="Advanced Network Technologies" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:description" content="Telecom and IT experts. We are specialized in fibre deployments, 5G and mobile/radio services." />
 	<meta name="twitter:title" content="Advanced Network Technologies" />
@@ -106,11 +106,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="header-top-text"><a href="https://goo.gl/maps/NyTBJm3o4nGvtY3k9" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</a></div>
+                    <div class="header-top-text"><a href="https://maps.app.goo.gl/1ZJZAcmxtDg5bJ1U6" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England.</div>
                 </div>
                 <div class="col-md-6">
-                    <div class="header-top-text text-end">
-                        <a href="mailto:info@advnt.co.uk" class="text-white"><i class="fa fa-comment-o me-2"></i>info@advnt.co.uk</a>
+                    <div class="header-top-text">
+                        <p class="contact-p"><a href="mailto:info@advnt.co.uk"><i class="fa fa-comment-o me-2"></i>info@advnt.co.uk</a></p>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                     <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fa fa-linkedin"></i> </a> </li>
                 </ul>
 -->
-                <p class="text-white">&copy; 2023 AdvNT - Advanced Network Technologies</p>
+                <p class="text-white">&copy; 2023 FFP - Future Fiber Platform</p>
             </div>
         </div>
     </div>
@@ -208,7 +208,7 @@
                     <div class="tp-caption NotGeneric-SubTitle tp-resizeme text-white"
                          data-x="['right','right','right','right']" data-hoffset="['45','45','20','15']"
                          data-y="['middle','middle','middle','middle']" data-voffset="['-35','-35','-35','-20']"
-                         data-fontsize="['44','44','35','28']"
+                         data-fontsize="['74','74','35','28']"
                          data-lineheight="['44','44','35','30']"
                          data-width="none"
                          data-height="none"
@@ -218,7 +218,7 @@
                          data-frames='[{"from":"y:50px;opacity:0;","speed":1000,"to":"o:1;","delay":600,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);bw:2px 2px 2px 2px;"}]'
                          data-textAlign="['right','right','right','right']"
                          style="z-index: 8; white-space: nowrap; font-weight: 700; font-family:'Ubuntu',sans-serif !important;">
-                         Advanced Network Technologies
+                         Future Fibre Platform
                     </div>
                     <!-- layer nr. 2 -->
                     <div class="tp-caption NotGeneric-Title tp-resizeme font-weight-500 text-white"
@@ -254,11 +254,7 @@
                         <a href="#about" class="nav-link btn btn-gradient btn-rounded btn-large me-2">Who we are</a>
                         <a href="#services" class="nav-link btn btn btn-white btn-rounded btn-large">What we do</a>
                     </div>
-
-
                 </li>
-
-
             </ul>
         </div>
         <!-- END REVOLUTION SLIDER -->
@@ -466,7 +462,7 @@
                     <p class="contact-p"><a href="https://maps.app.goo.gl/1ZJZAcmxtDg5bJ1U6" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</a></p>
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
-                    <p>Advanced Network Technologies LTD is a company incorporated in England and Wales with Company Number 15014119 and Registered Office located at Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</p>
+                    <p>Future Fibre Platform LTD is a company incorporated in England and Wales with Company Number 15014119 and Registered Office located at Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</p>
                     <p>&nbsp;</p>
                     <!-- <h6 class="third-color mb-4">Send us an enquiry</h6> -->
                 </div>
