--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="header-top-text"><a href="https://maps.app.goo.gl/1ZJZAcmxtDg5bJ1U6" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England.</div>
+                    <div class="header-top-text"><a href="https://goo.gl/maps/NyTBJm3o4nGvtY3k9" target="_blank"><i class="fa fa-map-marker me-2"></i> 20 Primrose Street, London, EC2A 2EW, UK</a></div>
                 </div>
                 <div class="col-md-6">
-                    <div class="header-top-text">
-                        <p class="contact-p"><a href="mailto:info@advnt.co.uk"><i class="fa fa-comment-o me-2"></i>info@advnt.co.uk</a></p>
+                    <div class="header-top-text text-end">
+                        <a href="mailto:info@advnt.co.uk" class="text-white"><i class="fa fa-comment-o me-2"></i>info@ffp.co.uk</a>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                     <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fa fa-linkedin"></i> </a> </li>
                 </ul>
 -->
-                <p class="text-white">&copy; 2023 FFP - Future Fiber Platform</p>
+                <p class="text-white">&copy; 2023 FFP - Future Fibre Platform</p>
             </div>
         </div>
     </div>
@@ -334,11 +334,11 @@
                     <h6>&#43; Strategy</h6>
                     <p>In the telecommunications industry, effective strategies are imperative. With extensive experience in both demand and supply aspects of the sector, we excel in various areas, including: </p>
                     <ul class="liStrategy">
-                        <li>Assessing new technologies and developing comprehensive business cases.</li>
-                        <li>Formulating investment strategies and capital plans for cutting-edge network and technology upgrades.</li>
-                        <li>Leading strategic technology deployments and overseeing adoption programmes.</li>
-                        <li>Supporting the rollout of fibre optic networks, 5G, and mobile services.</li>
-                        <li>Implementing IT service rationalisation and transformation initiatives.</li>
+                        <li align="left">Assessing new technologies and developing comprehensive business cases.</li>
+                        <li align="left">Formulating investment strategies and capital plans for cutting-edge network and technology upgrades.</li>
+                        <li align="left">Leading strategic technology deployments and overseeing adoption programmes.</li>
+                        <li align="left">Supporting the rollout of fibre optic networks, 5G, and mobile services.</li>
+                        <li align="left">Implementing IT service rationalisation and transformation initiatives.</li>
                     </ul>
                 </div>
             </div>
@@ -458,7 +458,7 @@
                 <div class="title">
                     <h6 class="third-color mb-4">Contact</h6>
                     <h2 class="mb-4">Let's get in touch</h2>
-                    <p class="contact-p"><a href="mailto:info@advnt.co.uk"><i class="fa fa-comment-o me-2"></i>info@advnt.co.uk</a></p>
+                    <p class="contact-p"><a href="mailto:info@advnt.co.uk"><i class="fa fa-comment-o me-2"></i>info@ffp.co.uk</a></p>
                     <p class="contact-p"><a href="https://maps.app.goo.gl/1ZJZAcmxtDg5bJ1U6" target="_blank"><i class="fa fa-map-marker me-2"></i> Hill Dickinson Llp The Broadgate Tower, 20 Primrose Street, London, England, EC2A 2EW</a></p>
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
