--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 </section>
 <!--Parallax End-->
 
-<!--Content Start-->
+<!--Contact Start-->
 <section id="contact" class="content bg-img9">
     <div class="container">
         <div class="row">
